syntax = "proto3";

package rivet.backend.pkg.game.namespace_create;

import "proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	rivet.common.Uuid version_id = 2;
	string display_name = 3;
	string name_id = 4;
}

message Response {
	rivet.common.Uuid namespace_id = 1;
}
